gccida/c1/scope_die_for
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/scope_die_for/src/dwarf2out.c:10042:20: error: invalid operands to binary expression ('struct rtx_def' and 'int')
if ( rtl && rtl[1] != 38 ) 
            ~~~~~~ ^  ~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/scope_die_for/src/dwarf2out.c:10045:18: error: invalid operands to binary expression ('struct rtx_def' and 'int')
if ( v4 && v4[1] != 23 ) 
           ~~~~~ ^  ~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/scope_die_for/src/dwarf2out.c:10049:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6 = ( int)v5[1]; 
           ^~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/scope_die_for/src/dwarf2out.c:10063:44: error: use of undeclared identifier 'debug_info_level_0'
if ( ( v6 & 0x4000) == 0 && ( unsigned int)debug_info_level_0 >= DINFO_LEVEL_NORMAL ) 
                                           ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/scope_die_for/src/obj/dwarf2out.o] Error 1
